--- a/gnui/category/COMPONENT/Tooltip(js)/index.html
+++ b/gnui/category/COMPONENT/Tooltip(js)/index.html
@@ -347,6 +347,12 @@
       <td>툴팁 표시 방향(top,bottom,right,left,left-top,left-bottom,right-top,right-bottom)</td>
     </tr>
     <tr>
+      <td colspan="2">position</td>
+      <td>object</td>
+      <td></td>
+      <td>툴팁 표시 위치 {top: &#39;0px&#39;, left: &#39;0px&#39;}로 설정</td>
+    </tr>
+    <tr>
       <td colspan="2">contents</td>
       <td>string</td>
       <td></td>
@@ -392,7 +398,7 @@
 </div>
 
  
-          <footer class="aigis-footer">Last update at 2024/07/31 10:41</footer>
+          <footer class="aigis-footer">Last update at 2024/08/01 10:41</footer>
         </div>
       </div>
     </div>
