--- a/gnui/category/COMPONENT/MenuButton(js)/index.html
+++ b/gnui/category/COMPONENT/MenuButton(js)/index.html
@@ -222,7 +222,7 @@
     <tr>
       <td colspan="2">align</td>
       <td>string</td>
-      <td>&#39;center&#39;</td>
+      <td>&#39;left&#39;</td>
       <td>&#39;center&#39;,&#39;left&#39;,&#39;right&#39;</td>
     </tr>
     <tr>
@@ -273,7 +273,7 @@
 </div>
 
  
-          <footer class="aigis-footer">Last update at 2024/08/13 15:46</footer>
+          <footer class="aigis-footer">Last update at 2024/08/13 16:10</footer>
         </div>
       </div>
     </div>
