--- a/gnui/assets/theme.css
+++ b/gnui/assets/theme.css
@@ -55,6 +55,7 @@ tag:
   background-color: #486491;
   z-index: 10000;
 }
+
 .aigis-header span a {
   color: #fff;
   font-size: 2.6em;
@@ -62,6 +63,7 @@ tag:
   text-decoration: none;
   line-height: 110%;
 }
+
 .aigis-header div {
   float: right;
 }
@@ -111,6 +113,7 @@ tag: latest
   overflow: visible;
   /* background: url( 'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAAAAAA6mKC9AAAAF0lEQVR4AWP4DwVvoWCgBGAMmMQACQAAuK72AWHjK4wAAAAASUVORK5CYII=' ); */
 }
+
 .aigis-preview::before {
   content: 'preview';
   position: absolute;
@@ -122,6 +125,7 @@ tag: latest
   color: #fff;
   background: #181818;
 }
+
 .aigis-preview::after {
   content: '';
   clear: both;
@@ -141,6 +145,7 @@ tag: latest
   font-size: 20px;
   box-sizing: border-box;
 }
+
 .ex-ag-btn--primary {
   color: black;
   background-color: #ffea3a;
@@ -159,7 +164,7 @@ tag: latest
 ```
 
 */
-.aigis-module pre:not([aria-hidden='true']) {
+.aigis-module>pre:not([aria-hidden='true']) {
   background-color: #272822;
   color: #f8f8f2;
   font-size: 14px;
@@ -171,11 +176,13 @@ tag: latest
   max-height: 300px;
   overflow: auto;
 }
-.aigis-module pre + pre {
+
+.aigis-module>pre+pre {
   margin-top: -3em;
   margin-bottom: 3em;
 }
-.aigis-module > ul:not([class]) {
+
+.aigis-module>ul:not([class]) {
   list-style: disc;
   margin: 10px 30px;
 }
@@ -189,10 +196,12 @@ tag: latest
   margin: 0;
   margin-top: 10px;
 }
-.aigis-preview p + p {
+
+.aigis-preview p+p {
   margin-top: 10px;
 }
-.aigis-preview + pre {
+
+.aigis-preview+pre {
   position: relative;
   border-radius: 0 0 3px 3px;
   border-top: none;
@@ -200,21 +209,25 @@ tag: latest
   height: auto;
   overflow-x: auto;
 }
+
 .aigis-module.Chart .aigis-preview {
   display: block;
 }
-.aigis-module.Chart .aigis-preview > div,
+
+.aigis-module.Chart .aigis-preview>div,
 .aigis-module.Chart table,
-.aigis-module.Chart table + pre,
-.aigis-module.Chart pre + pre {
+.aigis-module.Chart table+pre,
+.aigis-module.Chart pre+pre {
   display: inline-block;
   width: 49%;
   margin-right: 5px;
   vertical-align: middle;
 }
-.aigis-module.JsonView table:not(:last-of-type) td > pre {
+
+.aigis-module.JsonView table:not(:last-of-type) td>pre {
   max-width: 270px;
 }
+
 /*
 ---
 name: Sidemenu
@@ -255,9 +268,11 @@ tag: latest
   -ms-overflow-style: none;
   overflow-x: auto;
 }
+
 .aigis-sidemenu::-webkit-scrollbar {
   display: none;
 }
+
 .aigis-sidemenu__heading {
   font-size: 30px;
   margin: 12px 0;
@@ -266,6 +281,7 @@ tag: latest
   padding-left: 10px;
   line-height: 1em;
 }
+
 .aigis-sidemenu__heading a {
   color: inherit;
   text-decoration: none;
@@ -320,24 +336,30 @@ tag: latest
   text-decoration: underline;
   color: #2a436b;
 }
+
 .aigis-categoryList li[data-path-depth] a:before {
   content: '';
   margin-right: 10px;
 }
+
 .aigis-categoryList li[data-path-depth='1'] a:before {
   margin-left: 1em;
 }
+
 .aigis-categoryList li[data-path-depth='2'] a:before {
   margin-left: 2em;
 }
+
 .aigis-categoryList li[data-path-depth='3'] a:before {
   margin-left: 3em;
 }
+
 .aigis-categoryList li[data-path-depth='4'] a:before {
   margin-left: 4em;
 }
+
 .aigis-categoryList li[data-path-depth] [data-tree-current],
-.aigis-categoryList .current > a {
+.aigis-categoryList .current>a {
   background-color: #d2d2d2;
   color: #004ba9 !important;
   text-decoration: none !important;
@@ -363,6 +385,7 @@ tag: latest
   padding-left: 0;
   margin: 0;
 }
+
 /*
 ---
 name: Module list
@@ -395,10 +418,12 @@ tag: latest
   line-height: 1.6;
   font-size: 16px;
 }
+
 .aigis-moduleList__item a {
   color: #08f;
   text-decoration: none;
 }
+
 .aigis-moduleList__item a:hover {
   text-decoration: underline;
 }
@@ -410,9 +435,11 @@ tag: latest
   border-bottom: 1px solid #eee;
   position: relative;
 }
+
 .aigis-module__heading:hover a {
   position: relative;
 }
+
 .aigis-module__heading:hover a:before {
   content: '\00a7';
   position: absolute;
@@ -472,6 +499,7 @@ tag: special
 .aigis-colorPalette {
   margin-top: 5px;
 }
+
 .aigis-colorPalette__color {
   display: inline-block;
   vertical-align: middle;
@@ -479,6 +507,7 @@ tag: special
   width: 50%;
   margin-right: 5px;
 }
+
 .aigis-colorPalette__label {
   display: inline-block;
   vertical-align: middle;
@@ -505,12 +534,12 @@ body {
     sans-serif;
 }
 
-.aigis-module > ul code,
-.aigis-module > p code,
-.aigis-contents__body > ul code,
-.aigis-contents__body > p code,
-.aigis-contents__body > h2 code,
-.aigis-contents__body > h3 code {
+.aigis-module>ul code,
+.aigis-module>p code,
+.aigis-contents__body>ul code,
+.aigis-contents__body>p code,
+.aigis-contents__body>h2 code,
+.aigis-contents__body>h3 code {
   color: #666;
   background-color: #f7f7f7;
   padding: 0 3px;
@@ -524,6 +553,7 @@ body {
   min-width: 960px;
   margin-right: auto;
 }
+
 .aigis-container:after {
   content: '';
   display: table;
@@ -538,6 +568,7 @@ body {
   margin: 0 auto;
   /* font-size: 18px; */
 }
+
 .aigis-contents__body {
   /* color: #33331a; */
   max-width: 960px;
@@ -545,7 +576,8 @@ body {
   padding: 20px 20px;
   margin: 0 auto;
 }
-.aigis-contents__body > p {
+
+.aigis-contents__body>p {
   margin-bottom: 1em;
 }
 
