--- a/gnui/category/COMPONENT/Datagrid(js)/index.html
+++ b/gnui/category/COMPONENT/Datagrid(js)/index.html
@@ -453,6 +453,7 @@ Gn<span class="token punctuation" >.</span><span class="token function" >create<
       <b>isSelectedRow: true</b> =&gt; 활성화 된 상태로 표시<br>
       <b>noCheck: true</b> =&gt; 체크박스 표시안함<br>
       <b>isChecked: true</b> =&gt; 체크박스 체크된 상태로 표시<br>
+      <b>disabled: true</b> =&gt; 체크박스 disable 상태로 표시<br>
       <b>color:is-warning-light</b> =&gt; 행의 색 변경</td>
     </tr>
     <tr>
@@ -675,7 +676,7 @@ Gn<span class="token punctuation" >.</span><span class="token function" >create<
 </div>
 
  
-          <footer class="aigis-footer">Last update at 2024/09/24 16:39</footer>
+          <footer class="aigis-footer">Last update at 2024/09/25 07:58</footer>
         </div>
       </div>
     </div>
