--- a/gnui/category/COMPONENT/JsonView(js)/index.html
+++ b/gnui/category/COMPONENT/JsonView(js)/index.html
@@ -430,6 +430,13 @@
       <td></td>
       <td>데이터를 컨버팅하는 함수.<br> 스키마에 설정된 Converter가 존재할 시 해당 함수를 실행하여 리턴된 결과를 렌더링한다.<br>text 또는 html 사용 가능.</td>
     </tr>
+    <tr>
+      <td rowspan="3">textSets</td>
+      <td>noData</td>
+      <td>string</td>
+      <td>No records available.</td>
+      <td>데이터가 없을 경우 출력 메시지</td>
+    </tr>
   </tbody>
 </table>
 
@@ -1119,7 +1126,7 @@
 </div>
 
  
-          <footer class="aigis-footer">Last update at 2024/10/16 15:50</footer>
+          <footer class="aigis-footer">Last update at 2024/10/17 11:08</footer>
         </div>
       </div>
     </div>
