--- a/gnui/category/COMPONENT/Calendar(js)/index.html
+++ b/gnui/category/COMPONENT/Calendar(js)/index.html
@@ -198,6 +198,12 @@
       <td>date, datetime</td>
     </tr>
     <tr>
+      <td colspan="2">locale</td>
+      <td>&#39;ko&#39;|&#39;en&#39;</td>
+      <td>ko</td>
+      <td>표기문구 언어</td>
+    </tr>
+    <tr>
       <td colspan="2">onSelect</td>
       <td>function(value)</td>
       <td></td>
@@ -228,7 +234,7 @@
 </div>
 
  
-          <footer class="aigis-footer">Last update at 2024/11/14 11:11</footer>
+          <footer class="aigis-footer">Last update at 2024/11/14 14:11</footer>
         </div>
       </div>
     </div>
