--- a/gnui/category/COMPONENT/Tooltip(js)/index.html
+++ b/gnui/category/COMPONENT/Tooltip(js)/index.html
@@ -341,6 +341,12 @@
       <td>툴팁 표시 트리거타입(&#39;hover&#39;,&#39;click&#39;)</td>
     </tr>
     <tr>
+      <td colspan="2">delay</td>
+      <td>number</td>
+      <td>0</td>
+      <td>툴팁 제거 지연시간(ms)</td>
+    </tr>
+    <tr>
       <td colspan="2">direction</td>
       <td>string</td>
       <td>bottom</td>
@@ -398,7 +404,7 @@
 </div>
 
  
-          <footer class="aigis-footer">Last update at 2024/12/12 10:41</footer>
+          <footer class="aigis-footer">Last update at 2024/12/13 07:53</footer>
         </div>
       </div>
     </div>
